<resources>
    <string name="app_name">Toolbox</string>
    <string name="action_settings">Settings</string>
    <string name="Result_area">Result</string>
    <string name="Answer_Area">Result</string>
    <string name="btn_1">1</string>
    <string name="nub2">2</string>
    <string name="num3">3</string>
    <string name="numadd">+</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="numsub">-</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="nummul">*</string>
    <string name="ResultArea">Answer</string>
    <string name="Result_Area">Result</string>
    <string name="num0">0</string>
    <string name="numdot">.</string>
    <string name="eql">=</string>
    <string name="numdiv">/</string>
    <string name="Resultarea">result</string>
    <string name="num14">C</string>
    <string name="calculator">Calculator</string>
    <string name="videoplayer">Video Player</string>
    <string name="media">Media player</string>
    <string name="musicplaye">Music Palyer</string>
    <string name="frdbtn">froward</string>
    <string name="pausebtn">pause</string>
    <string name="backbtn">back</string>
    <string name="rewind">rewind</string>
    <string name="title_activity_audioplayer">Audioplayer</string>
    <string name="select">No file selected</string>
    <string name="title_activity_audio_playe">audioPlaye</string>
    <string name="Videoplayer">Audio player</string>
    <string name="notebtn">Notepad</string>
    <string name="title_activity_note_pad">NotePAd</string>
    <string name="newbtn">New</string>
    <string name="savebtn">Save</string>
    <string name="openbtn">Open</string>
    <string name="cambtn">Camera</string>
    <string name="camera_button">&#xf030; Take Picture</string>
    <string name="flashbtn">Flash</string>
    <string name="CamBtn">Camera</string>
    <string name="Cam">Cam</string>
    <string name="flashl">FlashLight</string>
    <string name="call">cal</string>
    <string name="title">Title</string>
    <string name="TitleArea">Title</string>
    <string name="thisispreview">This is preview</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="save">save</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="thiis_is_preview">thiis is preview</string>
    <string name="titleArea">title</string>
    <string name="songduration">songDuration</string>
    <string name="songname">songName</string>
    <string name="android_audio_player">Android Audio Player</string>
    <string name="no_songs_in_sd_card">No songs in SD Card.</string>
    <string name="end">End</string>
    <string name="shuffle">Shuffle</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="camera">Camera</string>
    <string name="mplayer">MPlayer</string>
    <string name="not_file_selected">Not file selected</string>
    <string name="mp3player">MP3Player</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_00_00_01">00:00:0</string>
    <string name="video_title">Video title</string>
    <string name="_30s">+30s</string>
    <string name="setting">Setting</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="saveD">Save</string>
    <string name="paint">Paint</string>
    <string name="undo">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
</resources>
