<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleArea"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/list_note_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dd_mm_yyyy"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/list_note_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thiis_is_preview"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</LinearLayout>